# xin

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release-homebrew.yml
docs/: CLI.md  INITIAL.md  REPLY_DESIGN.md  SCHEMA.md
docs/implementation/: HISTORY.md  LIBRARIES.md  MAILBOXES.md  ORGANIZE.md  READ.md  README.md  WRITE.md
scripts/: release.sh
scripts/templates/: SKILL.template.md
skills/xin/: SKILL.md  SKILL.template.md  commands.md
skills/xin/references/: SCHEMA.compare.md  SCHEMA.from-source.md  archive.md  attachment.md  auth.md  batch.md  commands.md  common-tasks.md  config.md  drafts.md  get.md  history.md  identities.md  inbox.md  labels.md  mailboxes.md  messages.md  read.md  reply.md  search.md  send.md  thread.md  trash.md  unread.md  url.md  watch.md
skills/xin/references/_schemas/: address.json  attachment.json  batch-modify.json  body-meta.json  body.json  email-metadata.json  envelope.json  error.json  get.json  inbox-next.json  index.json  labels-list.json  mailbox.json  meta.json  search-item.json  search.json  send.json
skills/xin/scripts/: generate-docs.ts
skills/xin/scripts/templates/: SKILL.template.md
src/: app_config.rs  backend.rs  cli.rs  config.rs  debug.rs  error.rs  headers.rs  jmap.rs  main.rs  output.rs  plain.rs  schema.rs  sugar.rs
src/commands/: auth_cmd.rs  config_cmd.rs  history.rs  inbox.rs  labels.rs  mod.rs  organize.rs  read.rs  send.rs  url.rs  watch.rs
tests/: README.md  config_auth_cli.rs  delete_mock.rs  drafts_mock.rs  history_mock.rs  identities_strict_using_mock.rs  inbox_next_mock.rs  interface_cli.rs  labels_get_id_mock.rs  labels_mock.rs  messages_search_mock.rs  organize_dry_run_mock.rs  organize_guardrails_mock.rs  organize_mock.rs  plain_output_mock.rs  read_attachment_download_mock.rs  read_filter_json_file_mock.rs  read_get_max_body_bytes_mock.rs  read_get_mock.rs  read_get_raw_full_mock.rs  read_paging_mismatch_mock.rs  read_paging_mock.rs  read_search_mock.rs  read_thread_attachments_mock.rs  read_thread_get_full_mock.rs  read_thread_get_mock.rs  send_mock.rs  watch_mock.rs
tests/feature/stalwart/: README.md  config.toml  docker-compose.yml
tests/feature/stalwart/cases/: README.md  (+18 more)
(+12 files in other folders)
