[package]
name = "xin"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"

base64 = { version = "0.22" }
chrono = { version = "0.4", features = ["serde"] }
jmap-client = { version = "0.4", default-features = false, features = ["async"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
url = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
wiremock = "0.6"
