[package]
name = "xin"
version = "0.1.2"
edition = "2024"
license = "MIT"
description = "Agent-first JMAP CLI (Fastmail-first)."
repository = "https://github.com/onevcat/xin"
homepage = "https://github.com/onevcat/xin"
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"

base64 = { version = "0.22" }
chrono = { version = "0.4", features = ["serde"] }
jmap-client = { version = "0.4", default-features = false, features = ["async"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal"] }
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
wiremock = "0.6"

[patch.crates-io]
# Use our fork while upstream PR is pending.
jmap-client = { git = "https://github.com/onevcat/jmap-client", rev = "61a2304" }
